Simplify description in python_intro.html
Updated the description metadata to remove reference to bank account programs.

--- a/labs/python_intro.html
+++ b/labs/python_intro.html
@@ -7,7 +7,7 @@
         <title>Lab: Python Introduction (Interactive Data Sci / Viz)</title>
         <meta
             name="description"
-            content="Learn core Python concepts through hands-on coding. Explore variables, loops, functions, and conditionals by building practical bank account programs."
+            content="Learn core Python concepts through hands-on coding. Explore variables, loops, functions, and conditionals."
         />
         <link href="/support/web/supplemental.css" rel="stylesheet" type="text/css" />
 
@@ -18,7 +18,7 @@
         <meta property="og:type" content="article" />
         <meta
             property="og:description"
-            content="Learn core Python concepts through hands-on coding. Explore variables, loops, functions, and conditionals by building practical bank account programs."
+            content="Learn core Python concepts through hands-on coding. Explore variables, loops, functions, and conditionals."
         />
         <meta
             property="og:url"
@@ -35,7 +35,7 @@
         />
         <meta
             name="twitter:description"
-            content="Learn core Python concepts through hands-on coding. Explore variables, loops, functions, and conditionals by building practical bank account programs."
+            content="Learn core Python concepts through hands-on coding. Explore variables, loops, functions, and conditionals."
         />
         <meta
             name="twitter:image"
