Revise meta description for Python Objects lab
Updated the description meta tags to emphasize graphical elements and mouse interactions in the lab.

--- a/labs/python_objects.html
+++ b/labs/python_objects.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Lab: Python Objects (Interactive Data Sci / Viz)</title>
-        <meta name="description" content="Learn object-oriented programming by building interactive simulations with Python. Create bouncing ball animations, explore classes and objects, and add mouse interaction." />
+        <meta name="description" content="Learn object-oriented programming by building interactive simulations with Python using graphical elements and mouse interactions." />
         <link href="/support/web/supplemental.css" rel="stylesheet" type="text/css" />
 
         <meta
@@ -15,7 +15,7 @@
         <meta property="og:type" content="article" />
         <meta
             property="og:description"
-            content="Build interactive graphics simulations with Python classes and object-oriented programming. Create bouncing balls and explore how objects behave and interact."
+            content="Learn object-oriented programming by building interactive simulations with Python using graphical elements and mouse interactions."
         />
         <meta
             property="og:url"
@@ -32,7 +32,7 @@
         />
         <meta
             name="twitter:description"
-            content="Build interactive graphics simulations with Python classes and object-oriented programming. Create bouncing balls and explore how objects behave and interact."
+            content="Learn object-oriented programming by building interactive simulations with Python using graphical elements and mouse interactions."
         />
         <meta
             name="twitter:image"
