--- a/lecture/index.html
+++ b/lecture/index.html
@@ -49,7 +49,7 @@
 
                 <div class="tag content">
                     <p>
-                        Open source course on designing and engineering interactive experiences with data. Through traditional data visualization approaches but extended through a multi-disciplinary approach, build tools for yourself to find insight, create impactful pieces to share discoveries with others, and craft digital spaces which invite audiences in to co-create meaning with you.
+                        Open source course on designing and engineering interactive experiences with data. We explore information design through traditional data visualization approaches but extend our understanding through a multi-disciplinary perspective. You will be able to build tools for yourself to find insight, create impactful pieces to share discoveries with others, and craft digital spaces which invite audiences in to co-create meaning with you.
                     </p>
                 </div>
 
