One more attempt at tagline formatting.

--- a/course_wide/syllabus_template.html
+++ b/course_wide/syllabus_template.html
@@ -119,9 +119,9 @@
                 <div class="section-tagline">
                     {{ section.tagline }}
                 </div>
-                <p>
+                <div class="section-tagline-sub">
                     {{ section.detailed }}
-                </p>
+                </div>
 
                 <table class="bottom-pad-table">
                     <tr>
